--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 <body>
     <ul>
-       <li>Vagrant</li>
-       <li>Docker</li>
+       <li>Vagrant: Gerenciando máquinas virtuais</li>
+       <li>Docker: Criando containners sem dor de cabeça</li>
        <li>Ansible</li>
-       <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li> 
+       <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+       <li>Curso de Kubernetes: Deployments, Volumes e Escalabilidade</li>
     </ul>
 </body>
 </html>
