--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <ul>
        <li>Vagrant: Gerenciando máquinas virtuais.</li>
        <li>Docker: Criando containners sem dor de cabeça.</li>
-       <li>Ansible: Inflaestrutura como código.</li>
+       <li>Ansible.</li>
        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software.</li>
        <li>Curso de Kubernetes: Deployments, Volumes e Escalabilidade.</li>
     </ul>
